# efsdb

./: .gitignore  README.md  all_files.txt  composer.json  create_route.php  current_route1.php  fix.php  fix_cache.php  fix_hydration.php  fix_routes.php  fix_staging_root.php  force_rebuild.php  found_files.txt  generate_fixtures.py  grep_routes.php  index.php  list_all.php  list_files.php  list_files2.php  list_routes.php  list_tombstoned.php  nominate_template_routes.php  package-lock.json  package.json  read_index.php  read_route.php  read_routes.php  rebuild_staging.php  restore_index.php  sync_prod.php  test2.php  test3.php  test_app.php  test_dir.php  test_dir2.php  test_explorer.php  test_explorer2.php  test_fast_path.php  test_ghost_files.php  test_html.php  (+17 more)
.github/workflows/: parity.yml  require-internal-doc-approvals.yml
.trae/rules/: rules.md
docs/: runtime-layout.md
docs/internal/: blake3-extension-build-test.md
efsdb-core/: Cargo.toml
efsdb-core/src/: lib.rs  tests.rs
install-seed/: README.md
projects/efsdb_homepage/: package.json  svelte.config.js  tsconfig.json
scripts/: build-web.ts  dev.ts  php-core.ps1  php-core.ts
scripts/manual/: README.md
spec/: CONFORMANCE.md  CURRENT_STATE.md  FORMAT.md  MIGRATION.md  RUNBOOK.md  auth-contract.md  canonical-result-schema.md  envelope-aead-subspec.md  envelope-extensions-subspec.md  php-fallback-policy.md  rust-parity-checklist.md  wasm-inspector-checklist.md
spec/archive/: API_SHAPES.md  (+2 more)
tests/: parity_baseline.json
web/: package.json  playwright.config.ts  tsconfig.json  vite.shared.ts
(+418 files in other folders)
